# bigfive-llm-evaluation

./: README.md  pyproject.toml
dat/00_inventories/: bfi-llm.json  lmlpa.json  social-desirability.json
dat/01_content_validity/: expert_ratings.csv
dat/02_pilot_study/: prompt-templates.json
dat/03_large_scale_administration/: meta_info_models.csv
doc/tables/: descriptives_table.txt
exp/01_content_validity/: eval_content_validity.py
exp/02_pilot_study/: eval_pilot_study.py  run_pilot_study.py
exp/02_pilot_study/responses_pilot/: claude-haiku-4-5.csv  deepseek-r1.csv  gemini-2-5-flash.csv  glm-5.csv  gpt-4o.csv  grok-4-1-fast-reasoning.csv  llama-3-1-8b-instruct.csv  mistral-small-2603.csv  qwen3-5-flash-02-23.csv
exp/03_large_scale_administration/: eval_CFA.R  eval_LMM.R  eval_norms.ipynb  eval_subgroups.ipynb  run_api_models.py  run_local_models.py
exp/03_large_scale_administration/responses/: aion-2-0.csv  claude-4-sonnet-20250514.csv  claude-haiku-4-5.csv  claude-opus-4-1.csv  claude-opus-4-20250514.csv  claude-opus-4-5.csv  claude-opus-4-6.csv  claude-opus-4-7.csv  claude-sonnet-4-5.csv  claude-sonnet-4-6.csv  codestral-2508.csv  cogito-v2-1-671b.csv  command-a.csv  deepseek-r1-0528-turbo.csv  deepseek-r1-0528.csv  deepseek-r1-distill-llama-70b.csv  deepseek-v3-0324.csv  deepseek-v3-1-terminus.csv  deepseek-v3-1.csv  deepseek-v3-2.csv  deepseek-v3.csv  deepseek-v4-flash.csv  deepseek-v4-pro.csv  devstral-2512.csv  (+194 more)
src/: API_prompting.py  content_validity_metrics.py  huggingface_prompting.py  preprocessing.py  reading_data.py  visualizations.py
