[project]
name = "bigfive-llm-evaluation"
version = "0.1.0"
description = "A psychometric evaluation of Big Five personality measurement in large language models: content validity, normative data, and factor structure across a large sample of LLMs."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "krippendorff>=0.8.2",
    "litellm>=1.85.0",
    "pandas>=3.0.3",
    "pingouin>=0.6.1",
    "torch>=2.12.0",
    "transformers>=5.9.0",
]

[build-system]
requires = ["setuptools>=80.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
